--- a/4rd year/2nd_semester/SI/tests/teste_2016_2017/parte_1_pergunta3/landing_page.html
+++ b/4rd year/2nd_semester/SI/tests/teste_2016_2017/parte_1_pergunta3/landing_page.html
@@ -12,25 +12,24 @@
     <link href="bootstrap-4.3.1/css/bootstrap.css" rel="stylesheet" />
     <link href="style/starter-template.css" rel="stylesheet" />
 
-    <title>Template</title>
+    <title>Conference Landing Page</title>
   </head>
   <body>
-    <div class="container">
       <div class="row" style="justify-content: center; padding-top: 50px;">
           <header>
             <h2>Very important conferência</h2>
           </header>
       </div>
-      <div class="row" style="margin-top: 15px; justify-content: space-around">
-        <div class="col-md-5" style="background-color: #fefefe; border: 2px solid">
+      <div class="row" style="position: relative; top: 180px; justify-content: space-around; min-height: 100%">
+        <div class="col-md-4" style="background-color: #cac8c8; display: flex; align-items: center; border: 2px solid">
             <p style="padding: 5px 5px 5px 5px">Esta é uma conferência organizada por um conjunto de cientistas
             bastante reconhecidos no mundo do sistemas distribuídos . Na mesma
             poderás encontrar palestras em que abordamos o algoritmo de relógio
             lógicos de Lamport, consistência eventual e muito mais...</p>
         </div>
-        <div class="col-md-5" style="background-color: #fefefe; border: 2px solid">
+        <div class="col-md-4" style="background-color: #fefefe; border: 2px solid">
         <div class="form-group">
-            <h2 class="text-center" style="padding-bottom: 10px">Registo</h2>
+            <h2 class="text-center" style="padding: 15px 0 10px 0">Registo</h2>
             <form>
                 <input type="text" class="form-control" id="username" placeholder="Username"><br>
                 <input type="text" class="form-control" id="password" placeholder="Password"><br>
@@ -42,12 +41,10 @@
         </div>
         
       </div>
-      <footer class="bg-light text-center text-lg-start" style="border: 2px solid; position: static">
-        <!-- Copyright -->
-        <div class="p-3" style="background-color: rgba(0, 0, 0, 0.2); justify-content: space-around">
+      <footer class="bg-light text-center text-lg-start" style="border: 2px solid; position: absolute; bottom: 0; width: 100%;">
+        <div class="p-3" style="background-color: rgba(0, 0, 0, 0.2); display: flex; justify-content: space-around">
           <a class="text-dark">conferenceorganizer@gmail.com</a>
           <a class="text-dark">Reach the organization through the phone: 912222222</a>
         </div>
       </footer>
-    </div>
 </html>
